--- a/examples/memory/index.html
+++ b/examples/memory/index.html
@@ -2,7 +2,7 @@
 
 <html lang="en">
     <head>
-        <title>Pagination</title>
+        <title>Memory</title>
 
         <style type="text/css">
             #grid {
@@ -30,6 +30,6 @@
         <script type="text/javascript" src="js/jquery.flip.js"></script>
         <script type="text/javascript" src="../../bin/parser.js"></script>
         <script type="text/javascript" src="../../bin/arrows.js"></script>
-        <script type="text/javascript" src="js/arrows.js"></script>
+        <script type="text/javascript" src="js/main.js"></script>
     </body>
 </html>
