--- a/examples/music/index.html
+++ b/examples/music/index.html
@@ -39,6 +39,6 @@
         <script type="text/javascript" src="../../bin/parser.js"></script>
         <script type="text/javascript" src="../../bin/arrows.js"></script>
         <script type="text/javascript" src="js/common.js"></script>
-        <script type="text/javascript" src="js/arrows.js"></script>
+        <script type="text/javascript" src="js/main.js"></script>
     </body>
 </html>
