Add callback version of memory.

--- a/examples/memory/index.html
+++ b/examples/memory/index.html
@@ -30,6 +30,7 @@
         <script type="text/javascript" src="js/jquery.flip.js"></script>
         <script type="text/javascript" src="../../bin/parser.js"></script>
         <script type="text/javascript" src="../../bin/arrows.js"></script>
+        <script type="text/javascript" src="js/common.js"></script>
         <script type="text/javascript" src="js/main.js"></script>
     </body>
 </html>
