--- a/examples/sorting/index.html
+++ b/examples/sorting/index.html
@@ -38,6 +38,7 @@
         <script type="text/javascript" src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
         <script type="text/javascript" src="../../bin/parser.js"></script>
         <script type="text/javascript" src="../../bin/arrows.js"></script>
+        <script type="text/javascript" src="js/common.js"></script>
         <script type="text/javascript" src="js/main.js"></script>
     </body>
 </html>
