--- a/examples/pagination/index.html
+++ b/examples/pagination/index.html
@@ -3,28 +3,53 @@
 <html lang="en">
     <head>
         <title>Pagination</title>
+
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+        <style type="text/css">
+            body {
+                padding: 10px;
+            }
+
+            .meta {
+                padding: 5px;
+                text-align: center;
+            }
+        </style>
     </head>
 
     <body>
-        <input type="text" id="filter" />
-        <table id="results">
-            <thead>
-                <tr>
-                    <td>ID</td>
-                    <td>Name</td>
-                    <td>Category</td>
-                    <td>Subcategry</td>
-                    <td>Container Type</td>
-                    <td>Price Per Unit</td>
-                    <td>Margin</td>
-                </tr>
-            </thead>
-            <tbody>
-            </tbody>
-        </table>
 
-        <a href="javascript:void(0)" class="paging-control" id="prev">Prev</a>
-        <a href="javascript:void(0)" class="paging-control" id="next">Next</a>
+        <div>
+            <div class="row meta">
+                <div class="col-md-6">
+                    <input type="text" id="filter" class="form-control" placeholder="Enter Search Term" />
+                </div>
+
+                <div class="col-md-6">
+                    <a href="javascript:void(0)" class="paging-control" id="prev">Prev</a>
+                    &middot;
+                    <span id="meta">Search for an item to display results</span>
+                    &middot;
+                    <a href="javascript:void(0)" class="paging-control" id="next">Next</a>
+                </div>
+            </div>
+
+            <table id="results" class="table table-striped table-bordered">
+                <thead>
+                    <tr>
+                        <td class="col-md-0">ID</td>
+                        <td class="col-md-6">Name</td>
+                        <td class="col-md-2">Category</td>
+                        <td class="col-md-2">Subcategry</td>
+                        <td class="col-md-1">Price / Unit</td>
+                        <td class="col-md-1">Margin</td>
+                    </tr>
+                </thead>
+                <tbody>
+                </tbody>
+            </table>
+        </div>
 
         <script type="text/javascript" src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
         <script type="text/javascript" src="../../bin/parser.js"></script>
