--- a/examples/pagination/index.html
+++ b/examples/pagination/index.html
@@ -23,7 +23,7 @@
         <div>
             <div class="row meta">
                 <div class="col-md-6">
-                    <input type="text" id="filter" class="form-control" placeholder="Enter Search Term" />
+                    <input type="text" id="filter" class="form-control" placeholder="Search Term" />
                 </div>
 
                 <div class="col-md-6">
