--- a/examples/pagination/index.html
+++ b/examples/pagination/index.html
@@ -4,7 +4,7 @@
     <head>
         <title>Pagination</title>
 
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.4/css/bootstrap.min.css" integrity="sha384-2hfp1SzUoho7/TsGGGDaFdsuuDL0LX2hnUp6VkX3CUQ2K4K+xjboZdsXyp4oUHZj" crossorigin="anonymous">
 
         <style type="text/css">
             body {
@@ -14,6 +14,10 @@
             .meta {
                 padding: 5px;
                 text-align: center;
+            }
+
+            results td:nth(0) {
+                width: 40px;
             }
         </style>
     </head>
