Fix example popups.

--- a/website/index.html
+++ b/website/index.html
@@ -52,10 +52,13 @@
 
         <div>
             <ul>
-                <li><a href="../examples/music/index.html" target="popup" onclick="window.open('../examples/music/index.html', 'Music', 'width=500,height=200')">Music</a></li>
-                <li><a href="../examples/memory/index.html" target="popup" onclick="window.open('../examples/memory/index.html', 'Memory', 'width=500,height=425')">Memory</a></li>
-                <li><a href="../examples/sorting/index.html" target="popup" onclick="window.open('../examples/sorting/index.html', 'Sorting', 'width=300,height=325')">Sorting</a></li>
-                <li><a href="../examples/pagination/index.html" target="popup" onclick="window.open('../examples/pagination/index.html', 'Pagination', 'width=750,height=450')">Pagination</a></li>
+                <li><a href="javascript:void(0);" target="popup" onclick="window.open('examples/music/index.html', 'Music', 'width=500,height=200')">Music</a></li>
+                <li><a href="javascript:void(0);" target="popup" onclick="window.open('examples/memory/index.html', 'Memory', 'width=500,height=425')">Memory</a></li>
+                <li><a href="javascript:void(0);" target="popup" onclick="window.open('examples/sorting/index.html', 'Sorting', 'width=300,height=325')">Sorting</a></li>
+                <li>
+                    <a href="javascript:void(0);" target="popup" onclick="window.open('examples/pagination/index.html', 'Pagination', 'width=750,height=450')">Pagination</a> &middot;
+                    <a href="http://nodejs-cs995.rhcloud.com/arrow/jquery.html">Timed Application</a>
+                </li>
             </ul>
         </div>
 
