Build examples with legacy version.

--- a/examples/pagination/index.html
+++ b/examples/pagination/index.html
@@ -53,8 +53,8 @@
         </table>
 
         <script type="text/javascript" src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
-        <script type="text/javascript" src="../../dist/parser.js"></script>
-        <script type="text/javascript" src="../../dist/arrows.js"></script>
+        <script type="text/javascript" src="../../dist/parser-legacy.js"></script>
+        <script type="text/javascript" src="../../dist/arrows-legacy.js"></script>
         <script type="text/javascript" src="js/main.js"></script>
     </body>
 </html>
