--- a/examples/memory/index.html
+++ b/examples/memory/index.html
@@ -44,8 +44,8 @@
 
         <script type="text/javascript" src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
         <script type="text/javascript" src="js/jquery.flip.js"></script>
-        <script type="text/javascript" src="../../dist/parser.js"></script>
-        <script type="text/javascript" src="../../dist/arrows.js"></script>
+        <script type="text/javascript" src="../../dist/parser-legacy.js"></script>
+        <script type="text/javascript" src="../../dist/arrows-legacy.js"></script>
         <script type="text/javascript" src="js/common.js"></script>
         <script type="text/javascript" src="js/main.js"></script>
     </body>
