--- a/examples/music/index.html
+++ b/examples/music/index.html
@@ -73,8 +73,8 @@
         </script>
 
         <script type="text/javascript" src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
-        <script type="text/javascript" src="../../dist/parser.js"></script>
-        <script type="text/javascript" src="../../dist/arrows.js"></script>
+        <script type="text/javascript" src="../../dist/parser-legacy.js"></script>
+        <script type="text/javascript" src="../../dist/arrows-legacy.js"></script>
         <script type="text/javascript" src="js/common.js"></script>
         <script type="text/javascript" src="js/main.js"></script>
     </body>
