--- a/examples/sorting/index.html
+++ b/examples/sorting/index.html
@@ -10,7 +10,7 @@
             body {
                 padding: 20px;
             }
-            
+
             #sort-div {
                 margin-top: 20px;
                 position: relative;
@@ -43,8 +43,8 @@
         <div id="sort-div"></div>
 
         <script type="text/javascript" src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
-        <script type="text/javascript" src="../../dist/parser.js"></script>
-        <script type="text/javascript" src="../../dist/arrows.js"></script>
+        <script type="text/javascript" src="../../dist/parser-legacy.js"></script>
+        <script type="text/javascript" src="../../dist/arrows-legacy.js"></script>
         <script type="text/javascript" src="js/common.js"></script>
         <script type="text/javascript" src="js/main.js"></script>
     </body>
