Restyle sorting example.

--- a/examples/sorting/index.html
+++ b/examples/sorting/index.html
@@ -9,18 +9,22 @@
         <style type="text/css">
             body {
                 padding: 20px;
+                text-align: center;
             }
 
             #sort-div {
-                margin-top: 20px;
                 position: relative;
+                margin: auto;
+                text-align: center;
+                width: 250px;
+                margin-top: 20px;
             }
 
             #sort-div div {
                 width: 0;
                 top: 0;
                 left: 0;
-                height: 10px;
+                height: 8px;
                 background: blue;
                 font-size: 8px;
                 position: absolute;
