Update website styles.

--- a/examples/memory/index.html
+++ b/examples/memory/index.html
@@ -4,7 +4,7 @@
     <head>
         <title>Memory</title>
 
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.4/css/bootstrap.min.css" integrity="sha384-2hfp1SzUoho7/TsGGGDaFdsuuDL0LX2hnUp6VkX3CUQ2K4K+xjboZdsXyp4oUHZj" crossorigin="anonymous">
+        <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
 
         <style type="text/css">
             body {
@@ -34,6 +34,11 @@
 
             #grid div:nth-child(4n+1) {
                 clear: both;
+            }
+
+            .btn-secondary {
+                background-color: white;
+                border: 1px solid #dbdbdb;
             }
         </style>
     </head>
