--- a/examples/sorting/index.html
+++ b/examples/sorting/index.html
@@ -4,7 +4,7 @@
     <head>
         <title>Sorting</title>
 
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.4/css/bootstrap.min.css" integrity="sha384-2hfp1SzUoho7/TsGGGDaFdsuuDL0LX2hnUp6VkX3CUQ2K4K+xjboZdsXyp4oUHZj" crossorigin="anonymous">
+        <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
 
         <style type="text/css">
             body {
@@ -36,6 +36,11 @@
 
             #sort-div div.swapping {
                 background-color: red;
+            }
+
+            .btn-secondary {
+                background-color: white;
+                border: 1px solid #dbdbdb;
             }
         </style>
     </head>
