Add link to whack-a-mole.

--- a/website/index.html
+++ b/website/index.html
@@ -61,6 +61,10 @@
                 </li>
 
                 <li>
+                    <a href="javascript:void(0);" target="popup" onclick="window.open('examples/whack/index.html', 'Whack-a-Mole', 'width=500,height=425')">Whack-a-Mole</a>
+                </li>
+
+                <li>
                     <a href="javascript:void(0);" target="popup" onclick="window.open('examples/sorting/index.html', 'Sorting', 'width=300,height=200')">Sorting</a>
                 </li>
 
