Update journal paper reference in website.

--- a/website/index.html
+++ b/website/index.html
@@ -79,12 +79,12 @@
 
         <div>
             <ul>
-                <!--<li>
-                    <div><a href="papers/Typing and Semantics of Aynchronous Arrows in JavaScript.pdf"><strong>Typing and Semantics of Aynchronous Arrows in JavaScript</strong></a></div>
+                <li>
+                    <div><a href="papers/Typing and Semantics of Asynchronous Arrows in JavaScript.pdf"><strong>Typing and Semantics of Aynchronous Arrows in JavaScript</strong></a></div>
                     <div><a href="http://www.eric-fritz.com">Fritz, Eric</a>, and <a href="http://uwm.edu/engineering/people/zhao-ph-d-tian/">Zhao, Tian</a></div>
-                    <div><em>In Revision, 2016.</em></div>
-                    <div>Asynchronous programming with callbacks in JavaScript leads to code that is difficult to understand and maintain. Arrows, a generalization of monads, are an elegant solution to asynchronous program composition. Unfortunately, improper arrow composition can cause mysterious failures with subtle sources. We present an arrows-based DSL in JavaScript which encodes semantics similar to ES6 Promises and an optional type-checker that reports errors at arrow composition time.</div>
-                </li>-->
+                    <div><em>Draft, 2017.</em></div>
+                    <div>Asynchronous programs in JavaScript using callbacks and promises are difficult to write correctly. Many programs have subtle errors due to the unwanted interaction of event handlers. To fix such errors, the programmer is burdened with explicit registration and de-registration of event handlers. This produces fragile code which is difficult to read and maintain. Arrows, a generalization of monads, are an elegant solution to asynchronous program composition. In this paper, we present the semantics of an arrow-based DSL in JavaScript which can encode asynchronous programs as a state machine where edge transitions are triggered by external events. To ensure that arrows are composed correctly, we provide an optional type checker that reports errors before the machine begins execution.</div>
+                </li>
 
                 <li>
                     <div><a href="papers/Arrows in Commercial Web Applications.pdf"><strong>Arrows in Commercial Web Applications</strong></a></div>
